--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -1,20 +1,11 @@
+@import 'variables';
+
 .board {
+    background-color: $black !important;
+    border: .1rem solid #444;
+    color: $white !important;
     height: calc(100vh - 120px);
     resize: none;
     padding: 1rem;
-
-    &::-webkit-scrollbar {
-        background-color: #ddd;
-        -webkit-appearance: none;
-        width:.35em;
-
-        &:window-inactive {
-            display: none;
-        };
-    };
-
-    &::-webkit-scrollbar-thumb {
-        background-color:#aaa;
-        border-radius: 1rem;
-    };
+    @include scrollbar;
 };
