--- a/src/scss/_todosList.scss
+++ b/src/scss/_todosList.scss
@@ -2,9 +2,11 @@
 
 .list-group-flush {
     display: grid;
-    max-height: calc(100vh - 275px);
+    margin-bottom: 2rem;
+    max-height: 80vh;
     overflow: auto;
     width: 100%;
+    @include scrollbar;
 };
 
 .list-group-item {
@@ -23,7 +25,7 @@
     };
 
     &:hover {
-        background-color: $taskHoverBackground !important
+        background-color: $taskHoverBackground !important;
     };
 };
 
@@ -36,7 +38,15 @@
         display: grid;
         gap: 1.25rem;
         grid-auto-flow: dense; 
-        grid-template-columns: unquote("repeat(auto-fill, minmax(min(100%, 15rem), 1fr))"); // SCSS things 😓
-        max-height: none;
+        grid-template-columns: unquote("repeat(auto-fill, minmax(min(100%, 15rem), 1fr))"); // SCSS problems 😓
     };
+};
+
+.task {
+    display: grid;
+    grid-template-columns: 3.5% 96.5%;
+
+    .group-identificator {
+        background-color: $defaultGroupIdentificarColor;
+    };  
 };
