--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'form';
 @import 'todosList';
 @import 'board';
+@import 'colorSelector';
 
 * {
     box-sizing: border-box;
@@ -11,9 +12,14 @@
 
 body {
     user-select: none;
+    @include scrollbar;
 };
 
 .navbar {
     margin-bottom: 3.5vh;
+};
+
+.main-container {
+    max-width: 1000px;
 };
 
