--- a/src/scss/_todosList.scss
+++ b/src/scss/_todosList.scss
@@ -34,7 +34,7 @@
 };
 
 @include wideDevice {
-    .list-group-flush {
+    .todo-list {
         display: grid;
         gap: 1.25rem;
         grid-auto-flow: dense; 
