--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'forms';
-@import 'todosList';
+@import 'bootstrapList';
+@import 'todo';
 @import 'board';
 @import 'colorSelector';
 @import 'timeList';
