--- a/src/scss/_swiper.scss
+++ b/src/scss/_swiper.scss
@@ -1,5 +1,21 @@
+.mySwiper {
+    background-color: rgba($white, $alpha: 0.05);
+    border-radius: 1rem;
+    cursor: grab;
+    height: auto;
+    margin-top: 1rem;
+    padding: 1rem;
+
+    &:active {
+        cursor: grabbing;
+    };
+
+    .swiper-slide {
+        width: 51%;
+    }; 
+};
 
 .swipeInactive {
     opacity: 50%;
     transition: opacity .2s;
-}
+};
