--- a/src/scss/_timeList.scss
+++ b/src/scss/_timeList.scss
@@ -1,20 +1,8 @@
 @import 'variables';
 
-.mySwiper {
-    background-color: rgba($white, $alpha: 0.05);
-    border-radius: 1rem;
-    cursor: grab;
-    height: auto;
-    margin-top: 1rem;
-    padding: 1rem;
-
-    &:active {
-        cursor: grabbing;
-    };
-
-    .swiper-slide {
-        width: 51%;
-    }; 
+.timeList-section {
+    max-width: 650px;
+    margin-left: auto;
+    margin-right: auto
 };
 
-  
