Updated board height on desktop

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -8,4 +8,8 @@
     resize: none;
     padding: 1rem;
     @include scrollbar;
+
+    @include wideDevice {
+        height: calc(95vh - 200px);
+    };
 };
